Removing particle system modifier through Python API, delete wrong modifier #90715

Closed
opened 2021-08-16 22:59:37 +02:00 by Robert Guetzkow · 4 comments

Blender Version
Broken: All versions since 8ddf7556a5

Short description of error
Removing particle modifiers through the Python API does not remove the modifier passed into bpy.types.ObjectModifiers.remove . Instead it removes the currently active particle system and its associated modifier.

This issue was original reported in this DevTalk post .

Exact steps for others to reproduce the error

  1. Create many particle systems, e.g. 30
  2. Run the following script and observe the deleted modifiers and particle systems. It should remove all of them containing "20" in the name, but that is not the case.
import bpy

for obj in bpy.context.selected_objects:
    for mod in obj.modifiers: 
        if "02" in mod.name:
            obj.modifiers.remove(mod)
**Blender Version** Broken: All versions since 8ddf7556a5 **Short description of error** Removing particle modifiers through the Python API does not remove the modifier passed into [bpy.types.ObjectModifiers.remove ](https://docs.blender.org/api/current/bpy.types.ObjectModifiers.html#bpy.types.ObjectModifiers.remove). Instead it removes the currently active particle system and its associated modifier. This issue was original reported in [this DevTalk post ](https://devtalk.blender.org/t/solved-help-for-remove-particle-systems/19990). **Exact steps for others to reproduce the error** 1. Create many particle systems, e.g. 30 2. Run the following script and observe the deleted modifiers and particle systems. It should remove all of them containing "20" in the name, but that is not the case. ``` import bpy for obj in bpy.context.selected_objects: for mod in obj.modifiers: if "02" in mod.name: obj.modifiers.remove(mod) ```
Author
Member

Added subscriber: @rjg

Added subscriber: @rjg
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 38bdde852f

This issue was referenced by 38bdde852f1c38a2eaba2b8efc15b49f226baffd
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Robert Guetzkow self-assigned this 2021-08-24 18:49:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90715
No description provided.